--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon/favicon.ico" sizes="any">
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg">
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
+
+    <!-- PWA / Android -->
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <meta name="theme-color" content="#006E49">
+
+    <!-- Optional extra sizes -->
+    <link rel="icon" type="image/png" sizes="96x96"   href="/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/web-app-manifest-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512"  href="/favicon/web-app-manifest-512x512.png">
     <title>NexaDigit</title>
   </head>
     <body>
