--- a/index.html
+++ b/index.html
@@ -3,47 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon/favicon.ico" sizes="any">
-    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg">
-    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
+    <!-- Fallback title/description for SEO; can be replaced by app -->
+    <meta name="description" content="Intelligent Automation and AI Consultancy." />
 
-    <!-- PWA / Android -->
-    <link rel="manifest" href="/favicon/site.webmanifest">
+    <!-- Favicons & Manifest -->
+    <link rel="icon" href="/assets/favicon/favicon.ico" sizes="any">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg">
+    <link rel="apple-touch-icon" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="stylesheet" href="https://assets.calendly.com/assets/external/widget.css" />
+    <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
     <meta name="theme-color" content="#006E49">
 
-    <!-- Optional extra sizes -->
-    <link rel="icon" type="image/png" sizes="96x96"   href="/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/web-app-manifest-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512"  href="/favicon/web-app-manifest-512x512.png">
-    <title>NexaDigit</title>
+    <!-- Extra sizes for Android -->
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/web-app-manifest-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicon/web-app-manifest-512x512.png">
   </head>
-    <body>
-     <div id="loader"
-     style="
-       position:fixed;
-       inset:0;
-       display:flex;
-       align-items:center;
-       justify-content:center;
-       background:#0F221D;
-       z-index:9999;
-       transition:opacity .5s;
-     ">
-
-  <img src="/src/assets/fav-icon-logo.svg"
-       alt="NexaDigit logo"
-       width="64" height="64"
-       style="filter:brightness(0) invert(1);"
-       class="animate-heartbeat" />
-</div>
-
-
-
-      <div id="app"></div>
-      <script type="module" src="/src/main.ts"></script>
-    </body>
-
-
+  <body>
+    <!-- Page Loader -->
+    <div id="loader"
+      style="position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#0F221D;z-index:9999;transition:opacity .5s;">
+      <img src="/src/assets/fav-icon-logo.svg" alt="NexaDigit logo" width="64" height="64"
+        style="filter:brightness(0) invert(1);" class="animate-heartbeat" />
+    </div>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
